# amazon-scraper-cli

./: README.md  amazon_review.py  logger_.py  pyproject.toml  scrape.py
