[tool.poetry]
name = "amazon-scraper-cli"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <72874670+baniasbaabe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.30.0"
typer = {extras = ["all"], version = "^0.7.0"}
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

pre-commit = "^2.19.0"

###############################################################################
#
#                                 TESTS
#
###############################################################################
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0"
pytest-randomly = "^3.5.0"

###############################################################################
#
#                                 FIXERS
#
###############################################################################
black = "^22.3.0"
autoflake = "^1.7.7"
isort = "^5.10.1"
docformatter = { version = "^1.5.0", extras=["tomli"] }
vulture = ">=1.0"


###############################################################################
#
#                                 LINTERS
#
###############################################################################
mypy = "^0.942"
interrogate = "^1.5.0"
flake8 = "^4.0.1"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
